--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,19 @@
     --third-font: "RobotoSlab", "sans-serif";
 
 }
+.container{
+    width: 942px; 
+    margin: 0 auto;
+}
+.header{
+    padding-top: 44px;
+
+}
+.services{
+    padding-top: 109px;
+    padding-bottom: 119px;
+}
+.contact{
+    padding-top: 92px ;
+    padding-bottom: 115px; ;
+}
